--- a/notifico/views/projects/templates/new_hook.html
+++ b/notifico/views/projects/templates/new_hook.html
@@ -6,7 +6,7 @@
 <link href="/css/prettify.css" type="text/css" rel="stylesheet" />
 {% endblock %}
 
-{% block js %}
+{% block script %}
 {{ super() }}
 <script type="text/javascript" src="/js/prettify.js"></script>
 <script type="text/javascript">
