Fix css overrides not applying on new_hooks, edit_hooks

--- a/notifico/views/projects/templates/edit_hook.html
+++ b/notifico/views/projects/templates/edit_hook.html
@@ -1,7 +1,7 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 
-{% block css %}
+{% block style %}
 {{ super() }}
 <link href="/css/prettify.css" type="text/css" rel="stylesheet" />
 {% endblock %}
