--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -1,4 +1,12 @@
 {% extends "base/body.html" %}
+{% macro link_p(project) %}
+<a href="{{ url_for('projects.overview', u=project.owner.username) }}">
+  {{ project.owner.username }}
+</a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+  {{ project.name }}
+</a>
+{% endmacro %}
+
 {% block content %}
 <div class="container-fluid">
   {% if not g.user %}
@@ -14,79 +22,38 @@
   </div>
   {% endif %}
 
-  {% if Project.query.count() %}
   <div class="row-fluid">
-    <div class="span8">
+    <div class="span12">
+      {# Show recently sent messages from public channels. #}
       <section>
         <header>
-          <h2>Newest Projects</h2>
+          <h2>Recent Messages</h2>
         </header>
         <div class="content">
-          {% for project in new_projects %}
-          <div>
-            <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">{{ project.full_name }}</a><br/>
-            <small>
-              Created on {{ project.created.strftime("%Y-%m-%d") }} by <a href="{{ url_for('projects.overview', u=project.owner.username) }}">{{ project.owner.username }}</a>
-              {% if project.website %}
-              | Website: {{ project.website|fixlink|urlize(40, True) }}
-              {% endif %}
-            </small>
+          {% if not recent_messages %}
+          {# Nothing to show! #}
+          <div class="alert alert-info">
+            There haven't been any recent messages.
           </div>
-          {% endfor %}
-        </div>
-      </section>
-    </div>
-    <div class="span4">
-      <section>
-        <header>
-          <h2>Stats</h2>
-        </header>
-        <div class="content">
-          <table class="table table-square">
+          {% else %}
+          <table class="table table-vertical">
             <tbody>
+              {% for message in recent_messages %}
+              {% if message.project %}
               <tr>
-                <td>Projects:</td>
-                <td style="text-align: right;">{{ Project.query.count() }}</td>
+                <td nowrap>{{ link_p(message.project) }}</td>
+                <td style="width: 100%;">
+                  {{ message.msg }}
+                </td>
               </tr>
-              <tr>
-                <td>Users:</td>
-                <td style="text-align: right;"><a href="{{ url_for('.users') }}">{{ User.query.count() }}</a></td>
-              </tr>
-              <tr>
-                <td>Channels:</td>
-                <td style="text-align: right;">{{ Channel.query.count() }}</td>
-              </tr>
-              <tr>
-                <td>Hooks:</td>
-                <td style="text-align: right;">{{ Hook.query.count() }}</td>
-              </tr>
-              <tr>
-                <td>Messages:</td>
-                <td style="text-align: right;">{{ message_count }}</td>
-              </tr>
-            </tbody>
-          </table>
-          <table class="table table-square">
-            <thead>
-              <tr>
-                <th>Network</th>
-                <th style="text-align: right;">Channels</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for network, channel_count in channel_count_by_network %}
-              <tr>
-                <td>{{ network }}</td>
-                <td style="text-align: right;"><a href="{{ url_for('.channels', network=network) }}">{{ channel_count }}</a></td>
-              </tr>
+              {% endif %}
               {% endfor %}
             </tbody>
           </table>
+          {% endif %}
         </div>
       </section>
     </div>
   </div>
-  {% endif %}
-
 </div>
 {% endblock %}
