Striped table looks decent

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -36,7 +36,7 @@
             There haven't been any recent messages.
           </div>
           {% else %}
-          <table class="table table-vertical">
+          <table class="table table-striped table-vertical">
             <tbody>
               {% for message in recent_messages %}
               {% if message.project %}
