Slight style tweak

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -41,25 +41,25 @@
     <div class="span3 metric">
       <section>
         <strong>{{ total_messages }}</strong>
-        Messages
+        <small class="muted"># of Messages</small>
       </section>
     </div>
     <div class="span3 metric">
       <section>
         <strong>{{ total_projects }}</strong>
-        Projects
+        <small class="muted"># of Projects</small>
       </section>
     </div>
     <div class="span3 metric">
       <section>
         <strong>{{ total_users }}</strong>
-        Users
+        <small class="muted"># of Users</small>
       </section>
     </div>
     <div class="span3 metric">
       <section>
         <strong>{{ total_channels }}</strong>
-        Channels
+        <small class="muted"># of Channels</small>
       </section>
     </div>
   </div>
