--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -65,34 +65,62 @@
   </div>
 
   <div class="row-fluid">
-    <div class="span12">
+    <div class="span6">
       {# Show recently sent messages from public channels. #}
       <section>
         <header>
-          <h2>Recent Messages</h2>
+          <h2>New Projects</h2>
         </header>
         <div class="content">
-          {% if not recent_messages %}
-          {# Nothing to show! #}
-          <div class="alert alert-info">
-            There haven't been any recent messages.
-          </div>
-          {% else %}
-          <table class="table table-striped table-vertical">
-            <tbody>
-              {% for message in recent_messages %}
-              {% if message.project %}
+          <table class="table table-striped">
+            <thead>
               <tr>
-                <td nowrap>{{ link_p(message.project) }}</td>
-                <td style="width: 100%;">
-                  {{ message.msg }}
-                </td>
+                <th>Created</th>
+                <th>Name</th>
+                <th>Messages</th>
               </tr>
-              {% endif %}
+            </thead>
+            <tbody>
+              {% for project in public_projects %}
+              <tr>
+                <td nowrap>{{ project.created|pretty }}</td>
+                <td style="width: 100%;">{{ link_p(project) }}</td>
+                <td style="text-align: center;">{{ project.message_count }}</td>
+              </tr>
               {% endfor %}
             </tbody>
           </table>
-          {% endif %}
+        </div>
+      </section>
+    </div>
+    <div class="span6">
+      <section>
+        <header>
+          <h2>Networks</h2>
+        </header>
+        <div class="content">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Host</th>
+                <th>Channels</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for network, count in popular_networks %}
+              <tr>
+                <td style="width: 100%;">
+                    {{ network }}
+                </td>
+                <td  style="text-align: center;">
+                  <a href="{{ url_for('.channels', network=network) }}">
+                    {{ count }}
+                  </a>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
       </section>
     </div>
