Chuck a 404 when trying to list channels on a network with no results.

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -109,9 +109,7 @@
             <tbody>
               {% for network, count in popular_networks %}
               <tr>
-                <td style="width: 100%;">
-                    {{ network }}
-                </td>
+                <td style="width: 100%;">{{ network }}</td>
                 <td  style="text-align: center;">
                   <a href="{{ url_for('.channels', network=network) }}">
                     {{ count }}
