Allow listing all public projects.

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -90,6 +90,7 @@
               {% endfor %}
             </tbody>
           </table>
+          <a class="btn btn-info" href="{{ url_for('.projects') }}">See All {{ total_projects }} Projects</a>
         </div>
       </section>
     </div>
