--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -1,26 +1,12 @@
 {% extends "base/body.html" %}
+{% from 'page.html' import render_pagination %}
+
 {% macro link_p(project) %}
 <a href="{{ url_for('projects.overview', u=project.owner.username) }}">
   {{ project.owner.username }}
 </a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
   {{ project.name }}
 </a>
-{% endmacro %}
-
-{% macro render_pagination(pg, endpoint) %}
-  <div class="pagination">
-    <ul>
-      {% for page in pg.iter_pages() %}
-        {% if page %}
-          <li {% if page == pg.page %}class="active"{% endif %}>
-            <a href="{{ url_for(endpoint, page=page, **kwargs) }}">{{ page }}</a>
-          </li>
-        {% else %}
-          <li class="disabled"><span>...</span></li>
-        {% endif %}
-      {% endfor %}
-    </ul>
-  </div>
 {% endmacro %}
 
 {% block content %}
