--- a/notifico/templates/page.html
+++ b/notifico/templates/page.html
@@ -13,3 +13,11 @@
     </ul>
   </div>
 {% endmacro %}
+
+{% macro link_p(project) %}
+<a href="{{ url_for('projects.overview', u=project.owner.username) }}">
+  {{ project.owner.username }}
+</a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
+  {{ project.name }}
+</a>
+{% endmacro %}
