--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -97,12 +97,15 @@ section {
             li > a {
                 text-shadow: none;
                 color: #999;
-                text-transform: uppercase;
 
                 &:hover {
                     color: white;
                 }
             }
+        }
+
+        .upper {
+            text-transform: uppercase;
         }
 
         .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
