Add divider before logout menu item

--- a/notifico/templates/base/nav.html
+++ b/notifico/templates/base/nav.html
@@ -46,6 +46,7 @@
                     OAuth Tokens
                   </a>
                 </li>
+                <li class="divider"></li>
                 <li>
                     <a href="{{ url_for('account.logout') }}">
                         Logout
