--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -92,6 +92,7 @@ section {
 
     .navbar-inner {
         #gradient > .vertical(@backgroundColor, @backgroundColor);
+        border: none;
 
         .nav {
             li > a {
@@ -109,7 +110,7 @@ section {
         }
 
         .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
-            background-color: @backgroundColor;
+            background-color: #72B626;
             color: white;
         }
 
