Giving a more subtle background a shot.

--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -5767,7 +5767,7 @@ a.badge:hover {
 html,
 body {
   background-color: #E8E8E8;
-  background-image: url('/img/retina_wood.png');
+  background-image: url('/img/groovepaper.png');
 }
 html,
 body,
