--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -2,7 +2,7 @@
 
 html, body {
   background-color: #E8E8E8;
-  background-image: url('/img/retina_wood.png');
+  background-image: url('/img/groovepaper.png');
 }
 
 html, body, p {
