--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -124,3 +124,9 @@ section {
 .table-square {
     border: 1px solid #ddd;
 }
+
+.metric {
+    section {
+        #gradient > .vertical(#F9F9F9, #EDEDED);
+    }
+}
