Gradient for homepage-unit

--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -52,6 +52,7 @@ input[type="color"],
     border: 1px solid #AAA;
     .border-radius(4px);
     .box-shadow(~"0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white");
+    #gradient > .vertical(#F9F9F9, #EDEDED);
 }
 
 /* Nixed from Genghis */
