--- a/notifico/static/css/bootstrap.css
+++ b/notifico/static/css/bootstrap.css
@@ -5820,6 +5820,14 @@ input[type="color"],
   -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
   -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
   box-shadow: 0 1px 5px rgba(0,0,0,0.1), inset 0 1px 0 white;
+  background-color: #f4f4f4;
+  background-image: -moz-linear-gradient(top, #f9f9f9, #ededed);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f9f9f9), to(#ededed));
+  background-image: -webkit-linear-gradient(top, #f9f9f9, #ededed);
+  background-image: -o-linear-gradient(top, #f9f9f9, #ededed);
+  background-image: linear-gradient(to bottom, #f9f9f9, #ededed);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff9f9f9', endColorstr='#ffededed', GradientType=0);
 }
 /* Nixed from Genghis */
 section {
