--- a/notifico/views/public/templates/users.html
+++ b/notifico/views/public/templates/users.html
@@ -1,40 +1,37 @@
 {% extends "base/body.html" %}
+{% from "page.html" import render_pagination %}
+
 {% block content %}
 <div class="container-fluid page-content">
-    <div class="row-fluid">
-        <div class="span12">
-            <section>
-                <header>
-                    <h2>Users</h2>
-                </header>
-                <div class="content">
-                    {% if users.count() == 0 %}
-                    <div class="alert alert-info">
-                        There are no users yet on this instance of {{ site_label }}.
-                    </div>
-                    {% else %}
-                    <table class="table table-vertical table-striped">
-                        <thead>
-                            <tr>
-                                <th>Username</th>
-                                <th>Joined</th>
-                                <th>Public Projects</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for user in users %}
-                            <tr>
-                                <td><a href="{{ url_for('projects.overview', u=user.username) }}">{{ user.username }}</a></td>
-                                <td>{{ user.joined.strftime("%Y-%m-%d") }}</td>
-                                <td>{{ user.projects.filter_by(public=True).count() }}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                    {% endif %}
-                </div>
-            </section>
+  <div class="row-fluid">
+    <div class="span12">
+      <section>
+        <header>
+          <h2>Users</h2>
+        </header>
+        <div class="content">
+          <table class="table table-vertical table-striped">
+            <thead>
+              <tr>
+                <th>Joined</th>
+                <th>Username</th>
+                <th nowrap>Public Projects</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for user in pagination.items %}
+              <tr>
+                <td nowrap>{{ user.joined|pretty }}</td>
+                <td style="width: 100%;"><a href="{{ url_for('projects.overview', u=user.username) }}">{{ user.username }}</a></td>
+                <td style="text-align: center;">{{ user.projects.filter_by(public=True).count() }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {{ render_pagination(pagination, '.users', **request.args) }}
         </div>
+      </section>
     </div>
+  </div>
 </div>
 {% endblock %}
