Hack-ish CIA.vc hook support, will be refined later.

--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -54,7 +54,11 @@
                   </a>
                 </td>
                 <td>
+                  {% if hook.absolute_url() %}
+                  <a href="{{ hook.absolute_url() }}">
+                  {% else %}
                   <a href="{{ url_for('.hook_receive', pid=project.id, key=hook.key) }}">
+                  {% endif %}
                     Link
                   </a>
                 </td>
