Add beta, so meta.

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -29,7 +29,7 @@
   <div class="row-fluid">
     <div class="span12">
       <div class="hero-unit homepage-unit">
-        <h1>Notifico</h1>
+        <h1>Notifico<sup>β</sup></h1>
         <p>Notifico is an open-source (<a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>) replacement for the now-defunct <a href="http://cia.vc">cia.vc</a> service. Notifico receives messages (such as commits and issues) from services and scripts and delivers them to IRC channels.</p>
       <p><a class="btn btn-primary btn-large" href="{{ url_for('account.register') }}">Sign Up</a></p>
       <p><small class="muted">Already have an account? <a href="{{ url_for('account.login') }}">Login</a></small></p>
