--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css?v=1" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     {% block style %}
     <style>
