--- a/notifico/templates/base/nav.html
+++ b/notifico/templates/base/nav.html
@@ -1,97 +1,25 @@
-{% macro active(end) %}
-{% if request.endpoint.startswith(end) %}active{% endif %}
-{% endmacro %}
-
-<div id="site-navbar" class="navbar navbar-fixed-top navbar-inverse">
+<div id="site-navbar" class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container-fluid">
+
+      <!-- Toggle for button -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
+
+      <!-- Branding -->
+      <a class="brand" href="{{ url_for('public.landing') }}">Notifico</a>
+
       <div class="nav-collapse collapse">
-        <ul class="nav">
-          <li class="{{ active('public.') }}">
-            <a href="{{ url_for('public.landing') }}">Home</a>
-          </li>
-          {% if not g.user %}
-          <li class="{{ active('account.login') }}">
-            <a href="{{ url_for('account.login') }}">Login</a>
-          </li>
-          <li class="{{ active('account.register') }}">
-            <a href="{{ url_for('account.register') }}">Register</a>
-          </li>
-          {% else %}
-            {% if g.user.projects.count() %}
-            <li class="dropdown {{ active('projects.') }}">
-              <a href="{{ url_for('projects.overview', u=g.user.username) }}"  class="dropdown-toggle" data-toggle="dropdown">
-                Projects
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                  {% for project in g.user.active_projects(5) %}
-                  <li>
-                    <a href="{{ url_for('projects.details', u=g.user.username, p=project.name) }}">
-                      <div class="pull-left">
-                        {{ project.name }}
-                      </div>
-                      <div class="pull-right">
-                        <span class="badge">{{ project.message_count }}</span>
-                      </div>
-                      <div style="clear: both;"></div>
-                    </a>
-                  </li>
-                  {% endfor %}
-                  <li class="divider"></li>
-                  <li>
-                    <a href="{{ url_for('projects.overview', u=g.user.username) }}">
-                      All Projects
-                    </a>
-                    <a href="{{ url_for('projects.new') }}">
-                      New Project
-                    </a>
-                  </li>
-              </ul>
-            </li>
-            {% else %}
-            <li class="{{ active('projects.') }}">
-              <a href="{{ url_for('projects.overview', u=g.user.username) }}">
-                  Projects
-              </a>
-            </li>
-            {% endif %}
-          {% endif %}
-        </ul>
         {% if g.user %}
-        <ul class="nav pull-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                {{ g.user.username }}
-                <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-                <li>
-                  <a href="{{ url_for('account.settings') }}">
-                    Settings
-                  </a>
-                </li>
-                <li>
-                  <a href="{{ url_for('account.tokens') }}">
-                    OAuth Tokens
-                  </a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                    <a href="{{ url_for('account.logout') }}">
-                        Logout
-                    </a>
-                </li>
-            </ul>
-          </li>
-        </ul>
+          {% include "base/user-nav.html" %}
+        {% else %}
+          {% include "base/public-nav.html" %}
         {% endif %}
-      </div><!--/.nav-collapse -->
+      </div>
+
     </div>
   </div>
 </div>
