--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -138,9 +138,9 @@
         </header>
         <div class="content">
           <p>Any messages received by this project will be forwarded to any of the IRC channels that have been added to them. An operator of the channel may blacklist the project, or ban the bot from entering their channel to prevent abuse.</p>
-          {% if not project.channels.count() %}
+          {% if not visible_channels.count() %}
           <div class="alert alert-info">
-            No channels have been added to this project.
+            No public channels have been added to this project.
           </div>
           {% else %}
           <table class="table table-striped table-vertical">
@@ -157,7 +157,7 @@
               </tr>
             </thead>
             <tbody>
-              {% for channel in project.channels.filter_by(public=True) %}
+              {% for channel in visible_channels %}
               <tr>
                 <td>{{ channel.channel }}</td>
                 <td>{{ channel.host }}</td>
@@ -165,7 +165,7 @@
                 <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
                 {% if is_owner %}
                 <td style="text-align: center;">
-                  <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
+                  <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
                 </td>
                 <td>
                   <div class="pull-right">
@@ -179,28 +179,6 @@
                 {% endif %}
               </tr>
               {% endfor %}
-              {% if is_owner %}
-              {% for channel in project.channels.filter_by(public=False) %}
-              <tr>
-                <td>{{ channel.channel }}</td>
-                <td>{{ channel.host }}</td>
-                <td>{{ channel.port }}</td>
-                <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
-                <td style="text-align: center;">
-                  <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
-                </td>
-                <td>
-                  <div class="pull-right">
-                    <div class="pull-right">
-                    <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-mini btn-danger">
-                      <i class="icon-trash icon-white"></i> Delete
-                    </a>
-                  </div>
-                  </div>
-                </td>
-              </tr>
-              {% endfor %}
-              {% endif %}
             </tbody>
           </table>
           {% endif %}
